update trades ready
